--- a/src/main/resources/templates/fragments/navbar.html
+++ b/src/main/resources/templates/fragments/navbar.html
@@ -3,8 +3,37 @@
 <head>
     <meta charset="UTF-8">
     <title>navbar</title>
+    <link rel="stylesheet" href="" th:href="@{/css/bootstrap.css}">
 </head>
 <body>
+
+
+<nav class="navbar navbar-expand-sm navbar-light bg-light sticky-top" th:fragment="navigationBar">
+    <ul class="navbar-nav">
+        <a class="nav-item" href="#">
+            <img alt="" src="image/logo.png" width="60" height="60">
+        </a>
+
+        <div id="takeAction" class="collapse navbar-collapse">
+            <li class="nav-item">
+                <a href="#" class="nav-link">Home</a>
+            </li>
+            <li class="nav-item">
+                <a href="#" class="nav-link">book an appointment</a>
+            </li>
+            <li class="nav-item">
+                <a href="#" class="nav-link">contact us</a>
+            </li>
+            <li class="nav-item">
+                <a href="#" class="nav-link">about us</a>
+            </li>
+        </div>
+    </ul>
+    <a href="#takeAction" data-toggle="collapse" class="navbar-toggler">
+        <span class="navbar-toggler-icon"></span>
+    </a>
+</nav>
+
 
 </body>
 </html>
