add user and animal classes and database

--- a/src/main/resources/templates/bookAnAppointment.html
+++ b/src/main/resources/templates/bookAnAppointment.html
@@ -13,7 +13,7 @@
 
 <body th:style="'background-image: url(/image/image.jpg);'">
 <!--navbar-->
-
+<div th:replace="~{/fragments/navbar :: navigationBar}"></div>
 <!--navbar-->
 
 <!--table booking-->
