--- a/src/main/resources/templates/login.html
+++ b/src/main/resources/templates/login.html
@@ -11,9 +11,7 @@
 </head>
 
 <body th:style="'background-image: url(/image/image.jpg);'">
-<!--navbar-->
-
-<!--navbar-->
+<div th:replace="~{/fragments/navbar :: navigationBar}"></div>
 
 <!--form-->
 <section class="corona">
