--- a/src/main/resources/templates/aboutUs.html
+++ b/src/main/resources/templates/aboutUs.html
@@ -16,34 +16,9 @@
 
 </head>
 
-<body>
-    <!--navbar-->
-    <nav class="navbar navbar-expand-sm navbar-light bg-light sticky-top">
-        <ul class="navbar-nav">
-            <a class="nav-item" href="#">
-                <img src="css/logo.png" width="60" height="60">
-            </a>
+<body th:style="'background-image: url(/image/image.jpg);'">
 
-            <div id="takeAction" class="collapse navbar-collapse">
-                <li class="nav-item">
-                    <a href="#" class="nav-link">Home</a>
-                </li>
-                <li class="nav-item">
-                    <a href="#" class="nav-link">Book Appointment</a>
-                </li>
-                <li class="nav-item">
-                    <a href="#" class="nav-link">Contact Us</a>
-                </li>
-                <li class="nav-item">
-                    <a href="#" class="nav-link">About Us</a>
-                </li>
-            </div>
-        </ul>
-        <a href="#takeAction" data-toggle="collapse" class="navbar-toggler">
-            <span class="navbar-toggler-icon"></span>
-        </a>
-    </nav>
-    <!--navbar-->
+<div th:replace="~{/fragments/navbar :: navigationBar}"></div>
 
 
     <div class="paragraph">
