--- a/src/main/resources/templates/adminHome.html
+++ b/src/main/resources/templates/adminHome.html
@@ -14,35 +14,8 @@
         </style>
     
     </head>
-    <body>
-        <nav class="navbar navbar-expand-sm navbar-light bg-light sticky-top">
-            <ul class="navbar-nav">
-                <a class="nav-item" href="#">
-                    <img src="css/logo.png" width="60" height="60">
-                </a>
-    
-                <div id="takeAction" class="collapse navbar-collapse">
-                    <li class="nav-item">
-                        <a href="#" class="nav-link">Home</a>
-                    </li>
-                    <li class="nav-item">
-                        <a href="#"  class="nav-link">Upgrade User</a>
-                    </li>
-                    <li class="nav-item">
-                        <a href="#"  class="nav-link">Suspend User</a>
-                    </li>
-                    <li class="nav-item">
-                        <a href="#"  class="nav-link">Profile</a>
-                    </li>
-                   <li class="nav-item">
-                       <a href="#"  class="nav-link">Logout</a>
-                   </li>
-                </div>
-            </ul>
-            <a href="#takeAction" data-toggle="collapse" class="navbar-toggler">
-                <span class="navbar-toggler-icon"></span>
-            </a>
-        </nav>
+    <body th:style="'background-image: url(/image/image.jpg);'">
+    <div th:replace="~{/fragments/navbar :: navigationBar}"></div>
 
         <div class="banner-container">
 
