--- a/src/main/resources/templates/login.html
+++ b/src/main/resources/templates/login.html
@@ -81,7 +81,7 @@
                             <hr class="my-4">
 
                             <div class="d-flex align-items-center justify-content-center pb-4">
-                                <p class="mb-0 me-2">Don't have an account? <a href="#!" class="btn-link">Register
+                                <p class="mb-0 me-2">Don't have an account? <a th:href="@{/signup}" class="btn-link">Register
                                     here</a></p>
                             </div>
                         </form>
