--- a/src/main/resources/static/css/signup.css
+++ b/src/main/resources/static/css/signup.css
@@ -1,7 +1,10 @@
-html{
+html {
+    padding: 0;
+    margin: 0;
     height: 100%;
 }
-body{
+
+body {
     padding: 0;
     margin: 0;
     min-height: 100%;
@@ -9,38 +12,30 @@ body{
     backdrop-filter: blur(3px);
 }
 
-.container{
-    padding: 35px;
-    width: 500px;
-    background-color: white;
-    block-size: 50%;
+.formStyle {
+    background-color: rgba(255, 255, 255, 0.7);
+    font-weight: bold;
     border-radius: 15px;
     box-shadow: 2px 2px 4px 1px rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
+    width: 650px;
+    padding: 50px;
 }
 
-.navbar{
-    padding: 15px;
-    font-size: larger;
-    /*margin: 5px;
-    border-radius: 10px;*/
-    font-weight: bold;  
+.container {
+    padding: 20px;
+    border-radius: 20px;
+    width: 1500px;
 }
+
+.ast {
+    color: red;
+}
+
 #message {
-    display:none;
+    display: none;
     background: #f1f1f1;
     color: #000;
     position: relative;
     padding: 20px;
     margin-top: 10px;
-  }
-  #form {
-    background-color: white;
-    border-radius: 5px;
-    padding: 20px;
-    margin-top: 1%;
-}
-.contain {
-	display: flex;
-	justify-content: center;
-	margin-top: 100px;
 }
