--- a/src/main/resources/templates/signup.html
+++ b/src/main/resources/templates/signup.html
@@ -5,166 +5,129 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Sign Up</title>
+    <title>INDEX</title>
     <link rel="stylesheet" th:href="@{/css/bootstrap.css}">
     <link rel="stylesheet" th:href="@{/css/signup.css}">
-    <link th:href="@{/css/bootstrap.min}" rel="stylesheet"/>
-    <script src="script.js"></script>
-    <script src="https://www.google.com/recaptcha/api.js" async defer></script>
-    <script src="https://www.google.com/recaptcha/api.js?onload=onloadCallback&render=explicit" async defer>
+    <script src="js/signUp.js"></script>
     </script>
 </head>
 
 <body th:style="'background-image: url(/image/image.jpg);'">
+
 <div th:replace="~{/fragments/navbar :: navigationBar}"></div>
 
-<div class="row">
-    <div id='form' class="col-8 col-md-4  mx-auto">
-        <h3 id="form__head" class="mb-4 "
-            style="font-size: 40px; text-align: center; color: rgb(36, 36, 246); font-weight: bolder;">Sign Up</h3>
+<div class="container">
+    <div class="formStyle mx-auto">
+        <div style="font-size:30px" class="form-group d-flex justify-content-center form-control-lg">
+            Sign up
+        </div>
+        <form onsubmit="validation()" th:action="@{/save}" th:object="${user}" method="post">
+            <div class="form-group">
+                <div class="row">
+                    <div class="form-group col">
+                        <label> First Name
+                            <h class="ast">*</h>
+                        </label>
+                        <input type="text" th:field="*{first_name}" class="form-control" name="username" required/>
+                    </div>
 
-        <form onsubmit="validation()" method="post" name="regForm" id="form-logIn">
-            <div class="form-group p-1">
-
-                <label for="username"> UserName
-                    <h style="color: red;"> *
-                    </h>
-                </label>
-                <input type="text" class="form-control" id="username" name="username" required/>
-            </div>
-
-            <div class="form-group p-1">
-                <label for="email"> Email
-                    <h style="color: red;"> *
-                    </h>
-                </label>
-                <input type="email" class="form-control" name="email" id="email" required/>
-
-
-            </div>
-            <div class="form-group p-1">
-                <label for="psw"> Password
-                    <h style="color: red;"> *
-                    </h>
-                </label>
-                <input type="password" class="form-control" id="psw" name="psw"
-                       pattern="(?=.*\d)(?=.*[a-z])(?=.*[A-Z]).{8,}" title="Must
-                    contain at least one number and one uppercase and lowercase letter, and at least 8 or more
-                    characters" required>
-            </div>
-            <div class="form-group p-1">
-                <label for="psw2"> Confirm Password
-                    <h style="color: red;"> *
-                    </h>
-                </label>
-                <input type="password" class="form-control" id="psw2" name="psw2"
-                       pattern="(?=.*\d)(?=.*[a-z])(?=.*[A-Z]).{8,}" title="Must
-                    contain at least one number and one uppercase and lowercase letter, and at least 8 or more
-                    characters" required>
-            </div>
-            <div class="form-group p-1">
-                <label for="phoneNumber">Phone Number
-                    <h style="color: red;"> *
-                    </h>
-                </label>
-                <input type="tel" id="phoneNumber" class="form-control" name="phone" pattern="01[0-2,5]{1}[0-9]{8}"
-                       required/>
-
-            </div>
-
-            <div class="form-group p-1">
-                <h style="font-weight: bold; ">Gender:
-                    <h style="color: red;"> *
-                    </h>
-                </h>
-                <div class="form-check form-check-inline">
-                    <input class="form-check-input" type="radio" name="inlineRadioOptions" id="femaleGender"
-                           value="option1" checked/>
-                    <label class="form-check-label p-1" for="femaleGender"
-                           style="font-weight: normal;">Female</label>
-
-                    <input class="form-check-input p-1" type="radio" name="inlineRadioOptions" id="maleGender "
-                           style="margin-left: 50px;" value="option2"/>
-                    <label class="form-check-label " style="font-weight: normal;">Male</label>
+                    <div class="form-group col">
+                        <label> Last Name
+                            <h class="ast">*</h>
+                        </label>
+                        <input type="text" class="form-control" name="username" required/>
+                    </div>
                 </div>
 
-                <div class="form-group p-1">
-                    <h style="font-weight: bold; ">Date of Birth:
+                <div class="form-group">
+                    <label for="email"> Email
+                        <h class="ast">*</h>
+                    </label>
+                    <input type="email" class="form-control" name="email" id="email" required/>
+                </div>
+                <div class="form-group">
+                    <label for="phoneNumber">Phone Number
+                        <h class="ast"> *
+                        </h>
+                    </label>
+                    <input type="tel" id="phoneNumber" class="form-control" name="phone"
+                           pattern="01[0-2,5]{1}[0-9]{8}" required/>
+                </div>
+
+                <div class="form-group">
+                    <h style="font-weight: bold; ">Gender
                         <h style="color: red;"> *
                         </h>
                     </h>
                     <div class="form-check form-check-inline">
-                        <input type="date" name="birth">
-                    </div>
-                    <h3 class="mb-4 "
-                        style="font-size: 40px; text-align: center; color: rgb(36, 36, 246); font-weight: bolder;">
-                        Your pet's information</h3>
-                    <div class="d-flex">
-                        <div class="d-inline-block p-3"><label for="petname"> Pet Name
-                            <h style="color: red;"> *</h>
-                        </label>
-                            <input type="text" class="form-control" id="petname" name="petname" required/>
-                        </div>
-                        <div class="d-inline-block p-3"><label for="yourpet"> your Pet
-                            <h style="color: red;"> *
-                            </h>
-                        </label>
-                            <input type="text" class="form-control" id="yourpet" name="yourpet" required/>
-                        </div>
+                        <input class="form-check-input" type="radio" name="inlineRadioOptions" id="femaleGender"
+                               value="option1" checked/>
+                        <label class="form-check-label p-1" for="femaleGender"
+                               style="font-weight: normal;">Male</label>
 
-                    </div>
-                    <div class="d-flex">
-                        <div class="d-inline-block p-3"><label for="pettype"> Pet Type
-                            <h style="color: red;"> *</h>
-                        </label>
-                            <input type="text" class="form-control" id="pettype" name="pettype" required/>
-                        </div>
-                        <div class="d-inline-block p-3"><label for="petage"> Pet Age
-                            <h style="color: red;"> *</h>
-                        </label>
-                            <input type="text" class="form-control" id="petage" name="petage" required/>
-                        </div>
-                    </div>
-
-
-                    <div class="d-flex">
-                        <div class="d-inline-block p-3"><label for="pettype"> Pet Gender
-                            <h style="color: red;"> *
-                            </h>
-                        </label>
-
-
-                            <select class="form-select form-select-lg mb-3" aria-label=".form-select-lg example">
-                                <option value="1">None</option>
-                                <option value="2">Female</option>
-                                <option value="3">Male</option>
-                            </select>
-                        </div>
-                    </div>
-
-                    <div class="form-group">
-                        <label for="comment" style="margin-left: 10px;">Extra Information</label>
-                        <textarea class="form-control" rows="5" id="comment" style="margin-left: 10px;"></textarea>
-                    </div>
-                    <div class="btn-group " style="margin-top: 20px; margin-left: 150px;">
-                        <button type="submit" id="submit" onclick="matchPassword()" class="btn mr-3 text-white"
-                                style="background-color: rgb(36, 36, 246); font-weight: bolder;">Register
-                        </button>
-                        <button type="reset" class="btn mr-3 text-white"
-                                style="background-color: rgb(0, 47, 70); font-weight: bolder;">Clear
-                        </button>
+                        <input class="form-check-input p-1" type="radio" name="inlineRadioOptions" id="maleGender "
+                               style="margin-left: 50px;" value="option2"/>
+                        <label class="form-check-label " style="font-weight: normal;">Female</label>
                     </div>
                 </div>
-            </div>
+                <div class="form-group">
+                    <h style="font-weight: bold; ">Date of Birth
+                        <h style="color: red;"> *
+                        </h>
+                    </h>
+                    <input type="date" name="date">
+                </div>
 
+                <div class="form-group">
+                    <label for="psw"> Password
+                        <h class="ast">*</h>
+                    </label>
+                    <input type="password" class="form-control" id="psw" name="psw"
+                           pattern="(?=.*\d)(?=.*[a-z])(?=.*[A-Z]).{8,}" title="Must
+                    contain at least one number and one uppercase and lowercase letter, and at least 8 or more
+                    characters" required>
+                </div>
+
+                <div class="form-group">
+                    <label for="psw2">Confirm Password
+                        <h class="ast">*</h>
+                    </label>
+                    <input type="password" class="form-control" id="psw2" name="psw2"
+                           pattern="(?=.*\d)(?=.*[a-z])(?=.*[A-Z]).{8,}" title="Must
+                    contain at least one number and one uppercase and lowercase letter, and at least 8 or more
+                    characters" required>
+                </div>
+
+                <div class="btns text-center">
+                    <button type="submit" id="submit" onclick="matchPassword()"
+                            class="btn btn-outline-primary mr-3">Register
+                    </button>
+                    <button type="reset" class="btn btn-outline-primary mr-3">Clear</button>
+                </div>
+            </div>
         </form>
     </div>
-    <div id="message">
-        <h3>Password must contain the following:</h3>
-        <p id="letter" class="invalid">A <b>lowercase</b> letter</p>
-        <p id="capital" class="invalid">A <b>capital (uppercase)</b> letter</p>
-        <p id="number" class="invalid">A <b>number</b></p>
-        <p id="length" class="invalid">Minimum <b>8 characters</b></p>
-    </div>
 </div>
+
+<div id="message">
+    <h3>Password must contain the following:</h3>
+    <p id="letter" class="invalid">A <b>lowercase</b> letter</p>
+    <p id="capital" class="invalid">A <b>capital (uppercase)</b> letter</p>
+    <p id="number" class="invalid">A <b>number</b></p>
+    <p id="length" class="invalid">Minimum <b>8 characters</b></p>
+</div>
+</div>
+
+<br><br><br>
+
+<!--footer-->
+<div class="footer">
+    <footer class="bg-light text-center text-lg-start fixed-bottom">
+        <div class="text-center p-3" style="background-color: rgba(0, 0, 0, 0.2);">
+            © 2020 Copyright:
+            <a class="text-dark" href="https://mdbootstrap.com/">MDBootstrap.com</a>
+        </div>
+    </footer>
+</div>
+<!--footer-->
 </body>
