--- a/src/main/resources/templates/signup.html
+++ b/src/main/resources/templates/signup.html
@@ -1,11 +1,11 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en" xmlns:th="http://www.thymeleaf.org">
 
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>INDEX</title>
+    <title>Signup</title>
     <link rel="stylesheet" th:href="@{/css/bootstrap.css}">
     <link rel="stylesheet" th:href="@{/css/signup.css}">
     <script src="js/signUp.js"></script>
@@ -21,21 +21,22 @@
         <div style="font-size:30px" class="form-group d-flex justify-content-center form-control-lg">
             Sign up
         </div>
-        <form onsubmit="validation()" th:action="@{/save}" th:object="${user}" method="post">
+
+        <form onsubmit="validation()" th:action="@{/signup}" th:object="${userDTO}" method="post">
             <div class="form-group">
                 <div class="row">
                     <div class="form-group col">
                         <label> First Name
                             <h class="ast">*</h>
                         </label>
-                        <input type="text" th:field="*{first_name}" class="form-control" name="username" required/>
+                        <input type="text" th:value="*{firstName}" class="form-control" name="firstName" required>
                     </div>
 
                     <div class="form-group col">
                         <label> Last Name
                             <h class="ast">*</h>
                         </label>
-                        <input type="text" class="form-control" name="username" required/>
+                        <input type="text" th:value="*{lastName}" class="form-control" name="lastName" required/>
                     </div>
                 </div>
 
@@ -43,14 +44,14 @@
                     <label for="email"> Email
                         <h class="ast">*</h>
                     </label>
-                    <input type="email" class="form-control" name="email" id="email" required/>
+                    <input type="email" th:value="*{email}" class="form-control" name="email" id="email" required/>
                 </div>
                 <div class="form-group">
                     <label for="phoneNumber">Phone Number
                         <h class="ast"> *
                         </h>
                     </label>
-                    <input type="tel" id="phoneNumber" class="form-control" name="phone"
+                    <input type="tel" th:value="*{phone}" id="phoneNumber" class="form-control" name="phone"
                            pattern="01[0-2,5]{1}[0-9]{8}" required/>
                 </div>
 
@@ -60,14 +61,13 @@
                         </h>
                     </h>
                     <div class="form-check form-check-inline">
-                        <input class="form-check-input" type="radio" name="inlineRadioOptions" id="femaleGender"
-                               value="option1" checked/>
-                        <label class="form-check-label p-1" for="femaleGender"
-                               style="font-weight: normal;">Male</label>
+                        <input type="radio" class="form-check-input" th:value="*{gender}" value="male" name="gender"
+                               id="maleGender"/>
+                        <label class="form-check-label">Male</label>
 
-                        <input class="form-check-input p-1" type="radio" name="inlineRadioOptions" id="maleGender "
-                               style="margin-left: 50px;" value="option2"/>
-                        <label class="form-check-label " style="font-weight: normal;">Female</label>
+                        <input type="radio" class="form-check-input" th:value="*{gender}" value="female" name="gender"
+                               id="femaleGender "/>
+                        <label class="form-check-label">Female</label>
                     </div>
                 </div>
                 <div class="form-group">
@@ -75,24 +75,24 @@
                         <h style="color: red;"> *
                         </h>
                     </h>
-                    <input type="date" name="date">
+                    <input type="date" th:value="*{dateOfBirth}" name="dateOfBirth">
                 </div>
 
                 <div class="form-group">
-                    <label for="psw"> Password
+                    <label> Password
                         <h class="ast">*</h>
                     </label>
-                    <input type="password" class="form-control" id="psw" name="psw"
+                    <input type="password" th:value="*{password}" class="form-control" name="password"
                            pattern="(?=.*\d)(?=.*[a-z])(?=.*[A-Z]).{8,}" title="Must
                     contain at least one number and one uppercase and lowercase letter, and at least 8 or more
                     characters" required>
                 </div>
 
                 <div class="form-group">
-                    <label for="psw2">Confirm Password
+                    <label>Confirm Password
                         <h class="ast">*</h>
                     </label>
-                    <input type="password" class="form-control" id="psw2" name="psw2"
+                    <input type="password" th:value="*{rePassword}" class="form-control" name="rePassword"
                            pattern="(?=.*\d)(?=.*[a-z])(?=.*[A-Z]).{8,}" title="Must
                     contain at least one number and one uppercase and lowercase letter, and at least 8 or more
                     characters" required>
@@ -131,3 +131,4 @@
 </div>
 <!--footer-->
 </body>
+</html>
