--- a/src/main/resources/templates/signup.html
+++ b/src/main/resources/templates/signup.html
@@ -82,20 +82,18 @@
                     <label> Password
                         <h class="ast">*</h>
                     </label>
-                    <input type="password" th:value="*{password}" class="form-control" name="password"
-                           pattern="(?=.*\d)(?=.*[a-z])(?=.*[A-Z]).{8,}" title="Must
-                    contain at least one number and one uppercase and lowercase letter, and at least 8 or more
-                    characters" required>
+                    <input type="password" th:value="*{password}" class="form-control" name="password">
                 </div>
 
                 <div class="form-group">
                     <label>Confirm Password
                         <h class="ast">*</h>
                     </label>
-                    <input type="password" th:value="*{rePassword}" class="form-control" name="rePassword"
-                           pattern="(?=.*\d)(?=.*[a-z])(?=.*[A-Z]).{8,}" title="Must
+                    <input type="password" th:value="*{rePassword}" class="form-control" name="rePassword">
+                           <!---pattern="(?=.\d)(?=.[a-z])(?=.*[A-Z]).{8,}" title="Must
                     contain at least one number and one uppercase and lowercase letter, and at least 8 or more
-                    characters" required>
+                    characters" required-->
+
                 </div>
 
                 <div class="btns text-center">
