--- a/src/main/resources/templates/signup.html
+++ b/src/main/resources/templates/signup.html
@@ -61,13 +61,13 @@
                         </h>
                     </h>
                     <div class="form-check form-check-inline">
-                        <input type="radio" class="form-check-input" th:value="*{gender}" value="male" name="gender"
+                        <input type="radio" class="form-check-input"  value="male" name="gender"
                                id="maleGender"/>
-                        <label class="form-check-label">Male</label>
+                        <label class="form-check-label" th:value="*{gender}">Male</label>
 
-                        <input type="radio" class="form-check-input" th:value="*{gender}" value="female" name="gender"
+                        <input type="radio" class="form-check-input"  value="female" name="gender"
                                id="femaleGender "/>
-                        <label class="form-check-label">Female</label>
+                        <label class="form-check-label" th:value="*{gender}" >Female</label>
                     </div>
                 </div>
                 <div class="form-group">
